--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
+    "esbuild": "^0.17.11",
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
     "nodemon": "^2.0.20",
@@ -18,9 +19,9 @@
     "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^3.1.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
