--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "type": "module"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.14",
     "dotenv": "^16.0.3",
     "esbuild": "^0.17.11",
     "express": "^4.18.2",
