--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "mongodb": "^5.1.0",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
+    "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.13",
