revert to normal npm

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "nodemon --watch server server/server.js",
-    "build": "npm i && tsc --noEmit && vite build",
+    "dev": "vite",
+    "build": "vite build",
     "preview": "vite preview",
     "start": "node server/server.js"
   },
