--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,15 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+.env.local
 node_modules
 src/.env
 server/.env
 dist
 dist-ssr
 *.local
+.env
+
 
 # Editor directories and files
 .vscode/*
