--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "node server/server.js",
     "build": "npm i && tsc --noEmit && vite build",
     "preview": "vite preview",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -29,15 +30,21 @@
   "devDependencies": {
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.49",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.27",
     "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "^18.0.10",
+    "@types/testing-library__react": "^10.2.0",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
+    "jsdom": "^21.1.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
+    "testing-library": "^0.0.2",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vitest": "^0.30.1"
   }
 }
