Revert "Merge branch 'render' into development"
This reverts commit e32455cbbf65bc1db1d78cbbfdec699cf5bba309, reversing
changes made to 5cbf93f9f7e0d0401529d6f75e17337996396b72.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "vite": "vite",
-    "dev": "node server/server.js",
+    "dev": "vite",
     "build": "npm i && tsc --noEmit && vite build",
     "preview": "vite preview",
     "start": "node server/server.js",
@@ -17,7 +17,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "daisyui": "^2.51.5",
     "dotenv": "^16.0.3",
-    "esbuild": "^0.17.18",
+    "esbuild": "^0.17.11",
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
     "nodemon": "^2.0.22",
