--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "vite": "vite",
     "dev": "vite",
-    "build": "npm i && tsc --noEmit && vite build",
+    "build": "npm i && vite build",
     "preview": "vite preview",
     "start": "node server/server.js",
     "test": "vitest"
